Set _enableReflowLines flag from profile when switching profiles

BUG: 459040